--- a/index.html
+++ b/index.html
@@ -511,10 +511,10 @@ pre.line-numbers > code {
 
 <body>
 
-<h1 id="toc_0">Cloud Computing w/ AWS</h1>
+<h1 id="toc_0">Cloud Computing with AWS</h1>
 
 <ol>
-<li><a href="#setup">Setup project</a></li>
+<li><a href="#setup">Project setup</a></li>
 <li><a href="#application_profiles">Application profiles</a></li>
 <li><a href="#database">Connecting your application to a PostgreSQL database</a></li>
 <li><a href="#manualdeploy">Manual deploy on EC2</a></li>
@@ -523,7 +523,7 @@ pre.line-numbers > code {
 
 <p><a name="setup"></a></p>
 
-<h2 id="toc_1">1. Setup project</h2>
+<h2 id="toc_1">1. Project setup</h2>
 
 <ol>
 <li>Download <a href="http://start.spring.io/">Spring Boot 1.5.8</a> with gradle. Pick the <em>web</em>, <em>JPA</em> and <em>postgreSQL</em> dependencies. Use <code>group ID = se.omegapoint</code> and <code>artifact ID = &lt;application-name&gt;</code>.</li>
@@ -565,13 +565,73 @@ pre.line-numbers > code {
 
 <div><pre class="line-numbers"><code class="language-javascript">{
     &quot;timeStamp&quot;: &quot;2017-10-28 11:16:58&quot;,
-    &quot;applicationName&quot;: &quot;reversing-richard&quot;,
+    &quot;applicationName&quot;: &quot;mega-arne&quot;,
     &quot;data&quot;: &quot;tniopagemo&quot;
+}</code></pre></div>
+
+<h3 id="toc_5">Java cheat sheet</h3>
+
+<h4 id="toc_6">Controller</h4>
+
+<div><pre class="line-numbers"><code class="language-java">@RestController
+@RequestMapping(&quot;&lt;application-name&gt;&quot;)
+public class ReverseController {
+
+    private final ReverseService reverseService;
+
+    @Autowired
+    public ReverseController(ReverseService reverseService) {
+        this.reverseService = reverseService;
+    }
+
+    @RequestMapping(value = &quot;/reverse/{data}&quot;, method = RequestMethod.GET, produces=&quot;application/json&quot;)
+    public ReversedData reverse(@PathVariable(&quot;data&quot;) String data) {
+        //Some logic
+        return this.reverseService.reverse(data);    
+    }
+
+}</code></pre></div>
+
+<h4 id="toc_7">Service</h4>
+
+<div><pre class="line-numbers"><code class="language-java">@Service
+public class ReverseService {
+
+    private final ReverseRepository reverseRepository;
+
+    @Autowired
+    public ReverseService(ReverseRepository reverseRepository) {
+        this.reverseRepository = reverseRepository;
+    }
+
+    public ReversedData reverse(final String data) {
+        //some logic
+       return null;
+    }
+}</code></pre></div>
+
+<h4 id="toc_8">Repository</h4>
+
+<div><pre class="line-numbers"><code class="language-java">public interface ReverseRepository extends CrudRepository&lt;ReverseDatum, Long&gt; {
+    ReverseDatum findByData(String data);
+}</code></pre></div>
+
+<h4 id="toc_9">Model</h4>
+
+<div><pre class="line-numbers"><code class="language-java">@Entity
+@Table(name = &quot;reverse_datum&quot;)
+public class ReverseDatum {
+
+    @Column(name = &quot;data&quot;, unique=true)
+    public String data;
+
+    // Some more fields
+
 }</code></pre></div>
 
 <p><a name="application_profiles"></a></p>
 
-<h2 id="toc_5">2. Application profiles</h2>
+<h2 id="toc_10">2. Application profiles</h2>
 
 <p>In order to be able to have different configurations for different environments, you need to create profile Add two properties files to the project: <code>application-production.properties</code> and <code>applications-local.properties</code>. Add <code>spring.profiles.active=local</code> at the very top of the file <code>applications-local.properties</code>. You also need to add the following code to <code>build.gradle</code>:</p>
 
@@ -588,11 +648,18 @@ bootRun {
 
 <p><a name="database"></a></p>
 
-<h2 id="toc_6">3. Connecting your application to a PostgreSQL database</h2>
+<h2 id="toc_11">3. Connecting your application to a PostgreSQL database</h2>
 
-<h3 id="toc_7">Local DB</h3>
+<h3 id="toc_12">Local DB</h3>
 
-<h4 id="toc_8">Configure <code>application-local.properties</code></h4>
+<h4 id="toc_13">Configure main class</h4>
+
+<p>Add the following notations on your main class:</p>
+
+<div><pre class="line-numbers"><code class="language-java">@EntityScan(&quot;se.omegapoint&quot;)
+@ComponentScan({&quot;se.omegapoint&quot;})</code></pre></div>
+
+<h4 id="toc_14">Configure <code>application-local.properties</code></h4>
 
 <div><pre class="line-numbers"><code class="language-bash">spring.datasource.url=jdbc:postgresql://localhost:5432/&lt;db-name&gt; 
 spring.datasource.username=&lt;username&gt;
@@ -602,11 +669,11 @@ spring.datasource.password=&lt;password&gt;   </code></pre></div>
 
 <div><pre class="line-numbers"><code class="language-bash">spring.jpa.hibernate.ddl-auto=create-drop</code></pre></div>
 
-<h4 id="toc_9">Configure <code>application.properties</code></h4>
+<h4 id="toc_15">Configure <code>application.properties</code></h4>
 
 <div><pre class="line-numbers"><code class="language-bash">spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect</code></pre></div>
 
-<h4 id="toc_10">Configure <code>build.gradle</code></h4>
+<h4 id="toc_16">Configure <code>build.gradle</code></h4>
 
 <p>Make sure you have the following dependencies:</p>
 
@@ -617,7 +684,7 @@ spring.datasource.password=&lt;password&gt;   </code></pre></div>
     testCompile(&#39;org.springframework.boot:spring-boot-starter-test&#39;)
 }</code></pre></div>
 
-<h4 id="toc_11">Suggested database model</h4>
+<h4 id="toc_17">Suggested database model</h4>
 
 <table>
 <thead>
@@ -642,7 +709,7 @@ spring.datasource.password=&lt;password&gt;   </code></pre></div>
 </tbody>
 </table>
 
-<h3 id="toc_12">Cloud DB</h3>
+<h3 id="toc_18">Cloud DB</h3>
 
 <p><a href="https://sts.omegapoint.se/adfs/ls/IdpInitiatedSignOn.aspx">Login to AWS</a>. Go to <strong>RDS</strong> under <em>&quot;Database&quot;</em>. Click on the orange button <em>&quot;Launch a DB Instance&quot;</em> and choose <em>PostgreSQL</em>. </p>
 
@@ -691,9 +758,9 @@ spring.datasource.password=&lt;password&gt;   </code></pre></div>
 <p>You should now be able to run <code>./gradlew bootRun -Dspring.profiles.active=production</code> <strong>on your local machine</strong> and connect your application to the RDS instance.<br>
 <a name="manualdeploy"></a></p>
 
-<h2 id="toc_13">4. Manual deploy on EC2</h2>
+<h2 id="toc_19">4. Manual deploy on EC2</h2>
 
-<h3 id="toc_14">Setup instance</h3>
+<h3 id="toc_20">Setup instance</h3>
 
 <p><a href="https://sts.omegapoint.se/adfs/ls/IdpInitiatedSignOn.aspx">Login to AWS</a>. </p>
 
@@ -745,7 +812,7 @@ spring.datasource.password=&lt;password&gt;   </code></pre></div>
 
 <p>You have now created a new EC2 instance in the cloud, yay!</p>
 
-<h3 id="toc_15">Manual deploy</h3>
+<h3 id="toc_21">Manual deploy</h3>
 
 <ol>
 <li>Upload your jar to to the instance with scp.</li>
@@ -756,19 +823,21 @@ spring.datasource.password=&lt;password&gt;   </code></pre></div>
 
 <p><a name="CodePipeline"></a></p>
 
-<h2 id="toc_16">5. Deployment with CodePipeline</h2>
+<h2 id="toc_22">5. Deployment with CodePipeline</h2>
+
+<p><a href="https://sts.omegapoint.se/adfs/ls/IdpInitiatedSignOn.aspx">Login to AWS</a>. </p>
 
 <p>CodePipeline is a managed service that connects together several other managed services. We will be using CodeBuild and CodeDeploy.
 In this lab CodeBuild will be configured to test and build our application. CodeDeploy will then copy the built artifact to an EC2 instance and start it.</p>
 
-<h3 id="toc_17">Setup a new EC2 instance</h3>
+<h3 id="toc_23">Setup a new EC2 instance</h3>
 
 <p>CodeDeploy requires the CodeDeploy Agent to be running on an EC2 instance.</p>
 
 <ol>
 <li>Terminate the EC2 instance you provisioned in the previous lab</li>
-<li>Download this CloudFormation template: http://s3-eu-west-1.amazonaws.com/aws-codedeploy-eu-west-1/templates/latest/CodeDeploy<em>SampleCF</em>Template.json</li>
-<li>Open the template in an editor. After line 247 we want to install Java 8 and uninstall Java 7 as we did with our previous instance. Add the following lines:</li>
+<li>Download this <a href="http://s3-eu-west-1.amazonaws.com/aws-codedeploy-eu-west-1/templates/latest/CodeDeploy_SampleCF_Template.json">CloudFormation template</a>.</li>
+<li>Open the template in an editor. After line 233 we want to install Java 8 and uninstall Java 7 as we did with our previous instance. Add the following lines:</li>
 </ol>
 
 <div><pre class="line-numbers"><code class="language-bash">&quot;yum install java-1.8.0 -y \n&quot;,
@@ -794,13 +863,13 @@ In this lab CodeBuild will be configured to test and build our application. Code
 <li>While the instance is being provisioned move on to the next step</li>
 </ol>
 
-<h3 id="toc_18">Source code modifications</h3>
+<h3 id="toc_24">Source code modifications</h3>
 
-<p>CodeBuild requires a buildspec.yml file to be in the root of your application. Example file:</p>
+<h4 id="toc_25">CodeBuild requires a buildspec.yml file to be in the root of your application. Example file:</h4>
 
-<p>buildspec.yml</p>
+<h5 id="toc_26">buildspec.yml</h5>
 
-<div><pre class="line-numbers"><code class="language-yml">version: 0.2
+<div><pre class="line-numbers"><code class="language-yaml">version: 0.2
 phases:
   build:
     commands:
@@ -813,11 +882,11 @@ artifacts:
     - start_application.sh
   discard-paths: yes</code></pre></div>
 
-<p>CodeDeploy requires two files, examples:</p>
+<h4 id="toc_27">CodeDeploy requires two files, examples:</h4>
 
-<p>appspec.yml</p>
+<h5 id="toc_28">appspec.yml</h5>
 
-<div><pre class="line-numbers"><code class="language-yml">version: 0.0
+<div><pre class="line-numbers"><code class="language-yaml">version: 0.0
 os: linux
 files:
   - source: &lt;application-name&gt;-&lt;version&gt;.jar
@@ -828,7 +897,7 @@ hooks:
       timeout: 500
       runas: root</code></pre></div>
 
-<p>start_application.sh</p>
+<h5 id="toc_29">start_application.sh</h5>
 
 <div><pre class="line-numbers"><code class="language-bash">#!/bin/bash
 
@@ -837,59 +906,86 @@ nohup java -jar /tmp/*.jar -Dspring.profiles.active=production &gt; app.log 2&gt
 
 <p>You may have to modify these files to fit your application.</p>
 
-<h3 id="toc_19">Create a CodePipeline</h3>
+<h3 id="toc_30">Create a CodePipeline</h3>
 
 <ol>
 <li>Go to the service CodePipeline and click <em>Create Pipeline</em></li>
 <li>Name it <code>&lt;application-name&gt;-CodePipeline</code> and click next step</li>
 <li>For <em>Source provider</em> chooce Github and click <em>Connect to Github</em> and authorize AWS to access your Github resources</li>
-<li><p>In <em>Repository</em> choose your application repository, then select the branch on which the version of the application that you want to deploy is (typiclly <em>master</em>). Then click <em>next</em>.</p>
+<li>In <em>Repository</em> choose your application repository, then select the branch on which the version of the application that you want to deploy is (typiclly <em>master</em>). Then click <em>next</em>.</li>
+</ol>
 
-<h4 id="toc_20">CodeBuild</h4>
+<h4 id="toc_31">CodeBuild</h4>
+
+<ul>
+<li><strong>Build</strong>
 
 <ul>
 <li>Build provider: <code>AWS CodeBuild</code></li>
 <li>Configure your project -&gt; Create a new build project</li>
 <li>Project Name: <code>&lt;application-name&gt;-CodeBuild</code></li>
-<li><strong>Environment: How to build</strong></li>
+</ul></li>
+<li><strong>Environment: How to build</strong>
+
+<ul>
 <li>Environment image: <code>Use an image managed by AWS CodeBuild</code></li>
 <li>Operating system: <code>Ubuntu</code></li>
 <li>Runtime: <code>Java</code></li>
-<li>Version: <code>aws/codebuild/java:openjdk-8</code></li>
-<li>Build specification: <code>Use the buildspec.yml in the source code root directory</code></li>
-<li><strong>AWS CodeBuild service role</strong></li>
+<li>Version: <em>&quot;aws/codebuild/java:openjdk-8&quot;</em></li>
+<li>Build specification: <em>&quot;Use the buildspec.yml in the source code root directory&quot;</em></li>
+</ul></li>
+<li><strong>AWS CodeBuild service role</strong>
+
+<ul>
 <li>Select <em>Create a service role in your account</em></li>
 <li>Role name: Leave as default</li>
 <li>Click <em>Save build project</em></li>
 <li>After the build project is saved click <em>Next step</em></li>
+</ul></li>
 </ul>
 
-<h4 id="toc_21">CodeDeploy</h4>
+<h4 id="toc_32">CodeDeploy</h4>
+
+<p>Deployment provider: <code>AWS CodeDeploy</code></p>
 
 <ul>
-<li>Deployment provider: <code>AWS CodeDeploy</code></li>
-<li><strong>AWS CodeDeploy</strong></li>
+<li><strong>AWS CodeDeploy</strong>
+
+<ul>
 <li>Click the link <em>create a new one in AWS CodeDeploy</em></li>
 <li>Application name: <code>&lt;application-name&gt;-Application</code></li>
 <li>Deployment group: <code>&lt;application-name&gt;-DeploymentGroup</code></li>
 <li>Deployment type: In-place deployment</li>
-<li><strong>Environment configuration</strong></li>
+</ul></li>
+<li><strong>Environment configuration</strong>
+
+<ul>
 <li>Choose Amazon EC2 instances</li>
 <li>Key: <code>Name</code></li>
 <li>Value: <code>&lt;application-name&gt;</code> make sure you see the EC2 instance created by the CloudFormation template in the <em>Matching instances</em> section</li>
-<li>Do not tick the box <em>Enable load balancing</em>
-** Deployment configuration**</li>
-<li>Leave as default
-** Service role**</li>
-<li>Service role ARN: Select the role named <code>BlueGreenCodeDeployServiceRole</code></li>
-<li>Click create application</li>
-</ul>
-
-<h4 id="toc_22">CodePipeline</h4>
+<li>Do not tick the box <em>Enable load balancing</em></li>
+</ul></li>
+<li><strong>Deployment configuration</strong>
 
 <ul>
-<li>Go back to the pipeline tab</li>
-<li><strong>AWS CodeDeploy</strong></li>
+<li>Leave as default</li>
+</ul></li>
+<li><strong>Service role</strong>
+
+<ul>
+<li>Service role ARN: Select the role named <code>BlueGreenCodeDeployServiceRole</code></li>
+<li>Click create application</li>
+</ul></li>
+</ul>
+
+<h4 id="toc_33">CodePipeline</h4>
+
+<p>Go back to the pipeline tab</p>
+
+<ul>
+<li><strong>AWS CodeDeploy</strong>
+
+<ul>
 <li>Application name: <code>&lt;application-name&gt;-Application</code></li>
 <li>Deployment group: <code>&lt;application-name&gt;-DeploymentGroup</code></li>
 <li>Click <em>Next step</em></li>
@@ -897,7 +993,7 @@ nohup java -jar /tmp/*.jar -Dspring.profiles.active=production &gt; app.log 2&gt
 <li>Click <em>Next step</em></li>
 <li>Review your pipeline, then click <em>Create pipeline</em></li>
 </ul></li>
-</ol>
+</ul>
 
 
 
@@ -910,11 +1006,19 @@ var _self="undefined"!=typeof window?window:"undefined"!=typeof WorkerGlobalScop
 </script>
 
 <script type="text/javascript">
+Prism.languages.yaml={scalar:{pattern:/([\-:]\s*(![^\s]+)?[ \t]*[|>])[ \t]*(?:((?:\r?\n|\r)[ \t]+)[^\r\n]+(?:\3[^\r\n]+)*)/,lookbehind:!0,alias:"string"},comment:/#.*/,key:{pattern:/(\s*[:\-,[{\r\n?][ \t]*(![^\s]+)?[ \t]*)[^\r\n{[\]},#]+?(?=\s*:\s)/,lookbehind:!0,alias:"atrule"},directive:{pattern:/(^[ \t]*)%.+/m,lookbehind:!0,alias:"important"},datetime:{pattern:/([:\-,[{]\s*(![^\s]+)?[ \t]*)(\d{4}-\d\d?-\d\d?([tT]|[ \t]+)\d\d?:\d{2}:\d{2}(\.\d*)?[ \t]*(Z|[-+]\d\d?(:\d{2})?)?|\d{4}-\d{2}-\d{2}|\d\d?:\d{2}(:\d{2}(\.\d*)?)?)(?=[ \t]*($|,|]|}))/m,lookbehind:!0,alias:"number"},"boolean":{pattern:/([:\-,[{]\s*(![^\s]+)?[ \t]*)(true|false)[ \t]*(?=$|,|]|})/im,lookbehind:!0,alias:"important"},"null":{pattern:/([:\-,[{]\s*(![^\s]+)?[ \t]*)(null|~)[ \t]*(?=$|,|]|})/im,lookbehind:!0,alias:"important"},string:{pattern:/([:\-,[{]\s*(![^\s]+)?[ \t]*)("(?:[^"\\]|\\.)*"|'(?:[^'\\]|\\.)*')(?=[ \t]*($|,|]|}))/m,lookbehind:!0},number:{pattern:/([:\-,[{]\s*(![^\s]+)?[ \t]*)[+\-]?(0x[\da-f]+|0o[0-7]+|(\d+\.?\d*|\.?\d+)(e[\+\-]?\d+)?|\.inf|\.nan)[ \t]*(?=$|,|]|})/im,lookbehind:!0},tag:/![^\s]+/,important:/[&*][\w]+/,punctuation:/---|[:[\]{}\-,|>?]|\.\.\./};
+</script>
+
+<script type="text/javascript">
 Prism.languages.clike={comment:[{pattern:/(^|[^\\])\/\*[\w\W]*?\*\//,lookbehind:!0},{pattern:/(^|[^\\:])\/\/.*/,lookbehind:!0}],string:{pattern:/(["'])(\\(?:\r\n|[\s\S])|(?!\1)[^\\\r\n])*\1/,greedy:!0},"class-name":{pattern:/((?:\b(?:class|interface|extends|implements|trait|instanceof|new)\s+)|(?:catch\s+\())[a-z0-9_\.\\]+/i,lookbehind:!0,inside:{punctuation:/(\.|\\)/}},keyword:/\b(if|else|while|do|for|return|in|instanceof|function|new|try|throw|catch|finally|null|break|continue)\b/,"boolean":/\b(true|false)\b/,"function":/[a-z0-9_]+(?=\()/i,number:/\b-?(?:0x[\da-f]+|\d*\.?\d+(?:e[+-]?\d+)?)\b/i,operator:/--?|\+\+?|!=?=?|<=?|>=?|==?=?|&&?|\|\|?|\?|\*|\/|~|\^|%/,punctuation:/[{}[\];(),.:]/};
 </script>
 
 <script type="text/javascript">
 Prism.languages.javascript=Prism.languages.extend("clike",{keyword:/\b(as|async|await|break|case|catch|class|const|continue|debugger|default|delete|do|else|enum|export|extends|finally|for|from|function|get|if|implements|import|in|instanceof|interface|let|new|null|of|package|private|protected|public|return|set|static|super|switch|this|throw|try|typeof|var|void|while|with|yield)\b/,number:/\b-?(0x[\dA-Fa-f]+|0b[01]+|0o[0-7]+|\d*\.?\d+([Ee][+-]?\d+)?|NaN|Infinity)\b/,"function":/[_$a-zA-Z\xA0-\uFFFF][_$a-zA-Z0-9\xA0-\uFFFF]*(?=\()/i}),Prism.languages.insertBefore("javascript","keyword",{regex:{pattern:/(^|[^\/])\/(?!\/)(\[.+?]|\\.|[^\/\\\r\n])+\/[gimyu]{0,5}(?=\s*($|[\r\n,.;})]))/,lookbehind:!0,greedy:!0}}),Prism.languages.insertBefore("javascript","class-name",{"template-string":{pattern:/`(?:\\\\|\\?[^\\])*?`/,greedy:!0,inside:{interpolation:{pattern:/\$\{[^}]+\}/,inside:{"interpolation-punctuation":{pattern:/^\$\{|\}$/,alias:"punctuation"},rest:Prism.languages.javascript}},string:/[\s\S]+/}}}),Prism.languages.markup&&Prism.languages.insertBefore("markup","tag",{script:{pattern:/(<script[\w\W]*?>)[\w\W]*?(?=<\/script>)/i,lookbehind:!0,inside:Prism.languages.javascript,alias:"language-javascript"}}),Prism.languages.js=Prism.languages.javascript;
+</script>
+
+<script type="text/javascript">
+Prism.languages.java=Prism.languages.extend("clike",{keyword:/\b(abstract|continue|for|new|switch|assert|default|goto|package|synchronized|boolean|do|if|private|this|break|double|implements|protected|throw|byte|else|import|public|throws|case|enum|instanceof|return|transient|catch|extends|int|short|try|char|final|interface|static|void|class|finally|long|strictfp|volatile|const|float|native|super|while)\b/,number:/\b0b[01]+\b|\b0x[\da-f]*\.?[\da-fp\-]+\b|\b\d*\.?\d+(?:e[+-]?\d+)?[df]?\b/i,operator:{pattern:/(^|[^.])(?:\+[+=]?|-[-=]?|!=?|<<?=?|>>?>?=?|==?|&[&=]?|\|[|=]?|\*=?|\/=?|%=?|\^=?|[?:~])/m,lookbehind:!0}}),Prism.languages.insertBefore("java","function",{annotation:{alias:"punctuation",pattern:/(^|[^.])@\w+/,lookbehind:!0}});
 </script>
 
 <script type="text/javascript">
