--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@ nohup java -jar /tmp/*.jar -Dspring.profiles.active=production &gt; app.log 2&gt
 <li>Select your instance and click <em>Add to registered</em></li>
 <li>Click <em>Next: Review</em></li>
 </ul></li>
-<li>*<em>Review</em>
+<li><strong>Review</strong>
 
 <ul>
 <li>Review your Load Balancer configuration and click <em>Create</em></li>
